Fix links to slide source files

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 1: Introduction
 
-- **Slides:** [Introduction and Functions in R](slides/lecture1.pdf) ([source](slides/lecture1.qmd))
+- **Slides:** [Introduction and Functions in R](slides/lecture1.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture1.qmd))
 - **Reading:** [Chapter 6 (AdvR)](https://adv-r.hadley.nz/functions.html)
 - **Exercises:**
   [A1-A7 (CSWR, Appendix
@@ -33,7 +33,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 2: OOP and Density Estimation
 
-- **Slides:** [OOP and Density Estimation](slides/lecture2.pdf) ([source](slides/lecture2.qmd))
+- **Slides:** [OOP and Density Estimation](slides/lecture2.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture2.qmd))
 - **Reading:**
   - [Chapter 13](https://adv-r.hadley.nz/s3.html) (AdvR)
   - [Sections 2-2.2](https://cswr.nrhstat.org/density.html) (CSwR)
@@ -45,7 +45,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 3: Measuring and Improving Performance
 
-- **Slides:** [Measuring and Improving Performance](slides/lecture3.pdf) ([source](slides/lecture3.qmd))
+- **Slides:** [Measuring and Improving Performance](slides/lecture3.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture3.qmd))
 - **Reading:** [Chapter 23](https://adv-r.hadley.nz/perf-measure.html) and
   [Chapter 24](https://adv-r.hadley.nz/perf-improve.html) (Advanced R)
 - **Exercises:**
@@ -63,7 +63,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 4: Parallelization and Scatterplot Smoothing
 
-- **Slides:** [Parallelization and Scatterplot Smoothing](slides/lecture4.pdf) ([source](slides/lecture4.qmd))
+- **Slides:** [Parallelization and Scatterplot Smoothing](slides/lecture4.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture4.qmd))
 - **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
 - **Exercises:**
   [3.4 (Chapter 3,
@@ -75,7 +75,7 @@ for you to solve independently at your own pace.
 
 - **Slides:**
   [Random Number Generation and Rejection
-  Sampling](slides/lecture5.pdf) ([source](slides/lecture5.qmd))
+  Sampling](slides/lecture5.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture5.qmd))
 - **Reading:**
   - [Chapter 5 (CSwR)](https://cswr.nrhstat.org/random-number-generation), but
     skip 5.1
@@ -93,7 +93,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 6: Monte Carlo Methods and Importance Sampling
 
-- **Slides:** [Monte Carlo Methods and Importance Sampling](slides/lecture6.pdf) ([source](slides/lecture6.qmd))
+- **Slides:** [Monte Carlo Methods and Importance Sampling](slides/lecture6.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture6.qmd))
 - **Reading:** [Chapter 7 (CSwR)](https://cswr.nrhstat.org/mci)
 
 #### Presentations of Assignment 1
@@ -104,7 +104,7 @@ for you to solve independently at your own pace.
 
 #### Lecture 7: Optimization
 
-- **Slides:** [Optimization](slides/lecture7.pdf) ([source](slides/lecture7.qmd))
+- **Slides:** [Optimization](slides/lecture7.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture7.qmd))
 - **Reading:**
   - [Chapter 8 (CSwR)](https://cswr.nrhstat.org/likelihood-and-optimization)
   - [Chapter 9 (CSwR)](https://cswr.nrhstat.org/numopt)
@@ -129,7 +129,7 @@ This lecture will be mostly a hands-on session. Please bring your laptop. We
 will work on debugging a piece of code together. You can find the code here:
 [debugging.R](R/debugging.R).
 
-- **Slides:** [Testing and Debugging](slides/lecture8.pdf) ([source](slides/lecture8.qmd))
+- **Slides:** [Testing and Debugging](slides/lecture8.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture8.qmd))
 - **Reading:**
   [Chapter 22 (AdvR)](https://adv-r.hadley.nz/debugging.html#debugging)
 
@@ -139,14 +139,14 @@ will work on debugging a piece of code together. You can find the code here:
 
 #### Lecture 9: Likelihood Optimization and the EM Algorithm
 
-- **Slides:** [Likelihood Optimization and the EM Algorithm](slides/lecture9.pdf) ([source](slides/lecture9.qmd))
+- **Slides:** [Likelihood Optimization and the EM Algorithm](slides/lecture9.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture9.qmd))
 - **Reading:** [Chapter 10 (CSwR)](https://cswr.nrhstat.org/em)
 
 ### Week 6
 
 #### Lecture 10: More on the EM Algorithm
 
-- **Slides:** [The EM Algorithm](slides/lecture10.pdf) ([source](slides/lecture10.qmd))
+- **Slides:** [The EM Algorithm](slides/lecture10.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture10.qmd))
 
 #### Exercise Session 6
 
@@ -154,7 +154,7 @@ will work on debugging a piece of code together. You can find the code here:
 
 #### Lecture 11: Stochastic Gradient Descent
 
-- **Slides:** [Stochastic Gradient Descent](slides/lecture11.pdf) ([source](slides/lecture11.qmd))
+- **Slides:** [Stochastic Gradient Descent](slides/lecture11.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture11.qmd))
 - **Reading:** [Sections 11-11.1 (CSwR)](https://cswr.nrhstat.org/stochopt)
 
 #### Presentations of Assignment 3
@@ -174,7 +174,7 @@ installed. You can follow the instructions in
 [Rcpp for Everyone](https://teuder.github.io/rcpp4everyone_en/020_install.html)
 to get started.
 
-- **Slides:** [Rcpp](slides/lecture12.pdf) ([source](slides/lecture12.qmd))
+- **Slides:** [Rcpp](slides/lecture12.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture12.qmd))
 - **Reading:** [Chapter 25 (AdvR)](https://adv-r.hadley.nz/rcpp.html#rcpp)
 - **Exercises:**
   - [1 and 2 from 25.2.6 (AdvR)](https://adv-r.hadley.nz/rcpp.html#exercise-started)
@@ -185,13 +185,13 @@ to get started.
 
 #### Lecture 13: Variations on Stochastic Gradient Descent
 
-- **Slides:** [Variations on Stochastic Gradient Descent](slides/lecture13.pdf)
+- **Slides:** [Variations on Stochastic Gradient Descent](https://github.com/math-ku/compstat/blob/main/slides/lecture13.qmd)
 - **Reading:**
   [Sections 11.2-11.3 (CSwR)](https://cswr.nrhstat.org/stochopt#beyond-basic-stochastic-gradient-algorithms)
 
 #### Presentations of Assignment 4
 
-- **Instructions:** [Assignment 4](assignments/assignment4.html) ([source](assignments/assignment4.qmd))
+- **Instructions:** [Assignment 4](assignments/assignment4.html)
 
 ### Week 8
 
@@ -203,7 +203,7 @@ will work on creating an R package together. Please install the
 [usethis](https://cran.r-project.org/web/packages/usethis/index.html) packages
 before the lecture.
 
-- **Slides:** [R Packages and Wrap-Up](slides/lecture14.pdf) ([source](slides/lecture14.qmd))
+- **Slides:** [R Packages and Wrap-Up](slides/lecture14.pdf) ([source](https://github.com/math-ku/compstat/blob/main/slides/lecture14.qmd))
 
 ### Week 9
 
