Use better description for exercise

--- a/slides/lecture12.qmd
+++ b/slides/lecture12.qmd
@@ -1178,7 +1178,7 @@ Won't cover it here, but has some advantages and disadvantages compared to Rcpp.
 ## Exercise
 
 1. Implement a function using Rcpp that computes the standard deviation of a
-   numeric vector. Benchmark against `sd()`.\footnote{Don't use `Rcpp::sd()`, please!}\pause
+   (numeric) vector.\footnote{Don't use `Rcpp::sd()`, please!}\pause
 2. Test your function against R's `sd()` function to make sure it works correctly.\pause
 3. Benchmark your function against R's `sd()` function to see if it is faster.
 4. Handle cases when the input vector is of length 0 or 1.
