--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -193,3 +193,14 @@
   langid        = {english},
   pagetotal     = {381}
 }
+
+@online{hansen2024,
+  title         = {Computational Statistics with {{R}}},
+  author        = {Hansen, Niels Richard},
+  url           = {https://cswr.nrhstat.org/},
+  urldate       = {2025-06-06},
+  type          = {Online Book},
+  date          = {2024-08-09},
+  langid        = {english},
+  organization  = {Computational Statistics with R}
+}
