--- a/slides/lecture13.qmd
+++ b/slides/lecture13.qmd
@@ -435,6 +435,158 @@ In term of convergence, all bets are now off.
 
 No optimal rates anymore, just heuristics.
 
+\medskip\pause
+
+But momentum helps in another way: it **reduces variance** of the iterates.
+
+##
+
+:::: {.columns align="center"}
+
+::: {.column width="47%"}
+
+### Variance Reduction
+
+Momentum smooths out the updates, reducing variance of the iterates.
+
+\medskip\pause
+
+And also adds inertia, accelerating progress in low-variance directions.
+
+:::
+
+::: {.column width="47%"}
+
+```{r}
+#| echo: false
+#| fig-height: 4
+#| fig-width: 3.2
+
+# Load the updated SGD implementation
+source(here::here("R", "sgd.R"))
+
+# Generate logistic regression data
+set.seed(123)
+
+n <- 1000
+p <- 2
+Sigma <- matrix(c(1, 0.8, 0.8, 1), nrow = 2)
+mu <- c(0, 0)
+
+X <- rmvnorm(n, mean = mu, sigma = Sigma)
+beta <- c(1, 2)
+y <- rbinom(n, 1, plogis(X %*% beta))
+
+res_glm <- glm.fit(X, y, family = binomial())
+
+loss_2d <- function(beta1, beta2, X, y) {
+  beta <- c(beta1, beta2)
+  z <- X %*% beta
+  p_hat <- 1 / (1 + exp(-z))
+  -mean(y * log(p_hat) + (1 - y) * log(1 - p_hat))
+}
+
+beta1 <- seq(-1, 3, length = 51)
+beta2 <- seq(-0.5, 5, length = 51)
+
+loss_2d_vectorized <- Vectorize(function(b1, b2) loss_2d(b1, b2, X, y))
+
+z <- outer(beta1, beta2, loss_2d_vectorized)
+
+# SGD parameters - use small batch and more epochs to show variance clearly
+batch_size <- 5
+mu <- 0.9
+max_epochs <- 1
+K <- 5
+
+set.seed(123)
+res_sgd <- logreg_sgd(
+  X,
+  y,
+  max_epochs = max_epochs,
+  batch_size = batch_size,
+  K = K,
+  mu = 0
+)
+set.seed(123)
+res_sgd_mom <- logreg_sgd(
+  X,
+  y,
+  max_epochs = max_epochs,
+  batch_size = batch_size,
+  K = K,
+  mu = mu
+)
+loss_optim <- loss_2d(res_glm$coefficients[1], res_glm$coefficients[2], X, y)
+
+loss1 <- loss_2d_vectorized(
+  res_sgd_mom$beta_history[1, ],
+  res_sgd_mom$beta_history[2, ]
+)
+loss2 <- loss_2d_vectorized(
+  res_sgd$beta_history[1, ],
+  res_sgd$beta_history[2, ]
+)
+
+pal <- palette.colors(palette = "Okabe-Ito")
+
+contour(
+  beta1,
+  beta2,
+  z,
+  col = "dark grey",
+  drawlabels = FALSE,
+  asp = 1
+)
+
+lines(
+  res_sgd$beta_history[1, ],
+  res_sgd$beta_history[2, ],
+  col = pal[3]
+)
+points(
+  res_sgd$beta_history[1, ],
+  res_sgd$beta_history[2, ],
+  col = pal[3],
+  pch = 19,
+  cex = 0.5
+)
+
+lines(
+  res_sgd_mom$beta_history[1, ],
+  res_sgd_mom$beta_history[2, ],
+  col = pal[1]
+)
+points(
+  res_sgd_mom$beta_history[1, ],
+  res_sgd_mom$beta_history[2, ],
+  col = pal[1],
+  pch = 19,
+  cex = 0.5
+)
+
+points(
+  res_glm$coefficients[1],
+  res_glm$coefficients[2],
+  col = pal[2],
+  pch = 19,
+  cex = 1
+)
+
+legend(
+  "bottomright",
+  legend = c("SGD", "SGD + Momentum"),
+  col = pal[c(3, 1)],
+  pch = 19,
+  cex = 0.8
+)
+```
+
+:::
+
+::::
+
+
 ## Iterate Averaging (Polyak--Ruppert)
 
 :::: {.columns align="center"}
@@ -480,6 +632,119 @@ Improves asymptotic variance at negligible cost.
 \medskip\pause
 
 Works with momentum and batches.
+
+##
+
+```{r}
+#| echo: false
+#| fig-width: 5.2
+#| fig-height: 3.3
+#| fig-cap: "Comparison of SGD with and without Polyak-Ruppert averaging for a logistic regression problem."
+
+# Generate logistic regression data
+set.seed(123)
+n <- 1000
+p <- 2
+X_logistic <- matrix(rnorm(n * p), n, p)
+beta_true <- c(0.5, 1.5)
+logits <- X_logistic %*% beta_true
+probs <- plogis(logits)
+y_logistic <- rbinom(n, 1, probs)
+
+# Logistic regression loss and gradient functions
+logistic_loss <- function(beta, X, y) {
+  logits <- X %*% beta
+  -sum(y * logits - log(1 + exp(logits)))
+}
+
+logistic_grad <- function(beta, X, y) {
+  logits <- X %*% beta
+  probs <- plogis(logits)
+  t(X) %*% (probs - y)
+}
+
+# SGD with Polyak-Ruppert averaging for logistic regression
+sgd_polyak_ruppert <- function(X, y, batch_size = 10, maxit = 500, lr = 0.19) {
+  n <- nrow(X)
+  p <- ncol(X)
+
+  # Initialize parameters
+  beta <- rnorm(p, 0, 0.1)
+  beta_avg <- beta
+
+  # Storage for trajectories
+  betas <- matrix(0, p, maxit)
+  betas_avg <- matrix(0, p, maxit)
+
+  betas[, 1] <- beta
+  betas_avg[, 1] <- beta_avg
+
+  for (k in 2:maxit) {
+    # Sample mini-batch
+    batch_idx <- sample(n, batch_size, replace = FALSE)
+    X_batch <- X[batch_idx, , drop = FALSE]
+    y_batch <- y[batch_idx]
+
+    # Compute gradient on mini-batch
+    grad <- logistic_grad(beta, X_batch, y_batch) / batch_size
+
+    # SGD update
+    beta <- beta - lr * grad
+
+    # Polyak-Ruppert averaging: running average of iterates
+    beta_avg <- beta_avg + (1 / k) * (beta - beta_avg)
+
+    # Store results
+    betas[, k] <- beta
+    betas_avg[, k] <- beta_avg
+  }
+
+  list(betas = betas, betas_avg = betas_avg, beta_true = beta_true)
+}
+
+# Run SGD with and without averaging
+result <- sgd_polyak_ruppert(X_logistic, y_logistic)
+
+# Create comparison plot
+par(mfrow = c(1, 2), mar = c(4, 4, 3, 1))
+
+# Plot parameter trajectories
+iterations <- 1:ncol(result$betas)
+
+# First parameter
+plot(
+  iterations,
+  result$betas[1, ],
+  type = "l",
+  col = "darkorange",
+  xlab = "Iteration",
+  ylab = expression(beta[1]),
+  ylim = range(c(result$betas[1, ], result$betas_avg[1, ]))
+)
+abline(h = result$beta_true[1], col = "black", lty = 2)
+lines(iterations, result$betas_avg[1, ], col = "steelblue")
+
+# Second parameter
+plot(
+  iterations,
+  result$betas[2, ],
+  type = "l",
+  col = "darkorange",
+  xlab = "Iteration",
+  ylab = expression(beta[2]),
+  ylim = range(c(result$betas[2, ], result$betas_avg[2, ]))
+)
+lines(iterations, result$betas_avg[2, ], col = "steelblue")
+abline(h = result$beta_true[2], col = "black", lty = 2)
+legend(
+  "bottomright",
+  legend = c("SGD", "Polyak-Ruppert", "True value"),
+  col = c("darkorange", "steelblue", "black"),
+  lty = c(1, 1, 2)
+)
+
+par(mfrow = c(1, 1))
+```
 
 ## Adaptive Gradients
 
@@ -593,6 +858,10 @@ Basically RMSProp + _momentum_ (for both gradients and second moments thereof)
 \medskip\pause
 
 Popular and still in much use today.
+
+\medskip\pause
+
+Not covered here, but see the course literature [@hansen20024] for details.
 
 ## Gradient Clipping
 
