Fix typo, improve Nesterov plot, use biblatex

--- a/slides/lecture13.qmd
+++ b/slides/lecture13.qmd
@@ -262,7 +262,7 @@ $$
 \begin{aligned}
   v_{k}               & = x_{k-1} - t \nabla f\left(x_{k-1} \right)         \\
   \alert<2->{x_{k}}   & \alert<2->{= v_{k} + \mu\left(v_{k} - v_{{k-1}} \right)} \\
-  \alert<2->{v_{k+1}} & \alert<2->{= x_{k} - \gamma \nabla f\left(x_{k} \right)} \\
+  \alert<2->{v_{k+1}} & \alert<2->{= x_{k} - t \nabla f\left(x_{k} \right)} \\
   x_{k+1}             & = v_{k+1} + \mu\left(v_{k+1} - v_{k} \right)
 \end{aligned}
 $$
@@ -348,7 +348,8 @@ Convergence rate with Nesterov acceleration goes from $O(1/k)$ to $O(1/k^2)$
 
 \medskip\pause
 
-This is **optimal** for a first-order method.
+This is **optimal** for a first-order method. But
+it is no longer a _descent_ method!
 
 \medskip\pause
 
@@ -915,7 +916,7 @@ Stop training when validation metric stops improving.
 
 \medskip\pause
 
-Use a held-out validation set; never the training set
+Use a held-out validation set; never the training set, and avoid **overfitting**.
 
 \medskip\pause
 
@@ -1215,13 +1216,28 @@ contour(x1, x2, z, nlevels = 20)
 
 ::::
 
+## SGD Techniques Summary
+
+| **Technique**          | **Key Idea**                       | **Update Rule**                                                        | **Benefits**                            | **Drawbacks**                    |
+| :--------------------- | :--------------------------------- | :--------------------------------------------------------------------- | :------------------------------------   | :------------------------------- |
+| **Polyak Momentum**    | Add inertia from previous step     | $x_k = x_{k-1} - t \nabla f(x_{k-1}) + \mu (x_{k-1} - x_{k-2})$        | Escapes local minima, reduces variance  | May fail to converge             |
+| **Nesterov**           | "Look ahead" before gradient       | $x_k = x_{k-1} - t \nabla f(y_{k-1}) + \mu (x_{k-1} - x_{k-2})$        | Faster convergence, better theory       | More complex                     |
+| **Polyak-Ruppert**     | Average all iterates               | $\bar{x}_k = \frac{1}{k} \sum_{i=1}^k x_i$                             | Reduces variance, works with any method | Slower initial convergence       |
+| **AdaGrad**            | Adapt to feature frequency         | $x_k = x_{k-1} - t G_k^{-1/2} \nabla f(x_{k-1})$                       | Good for sparse features                | Learning rate decays too fast    |
+| **RMSProp**            | Exponential moving average         | $x_k = x_{k-1} - \frac{t}{\sqrt{v_k}} \nabla f(x_{k-1})$               | Fixes AdaGrad decay problem             | Less theoretical foundation      |
+| **Gradient Clipping**  | Limit gradient magnitude           | $\tilde{\nabla} f = \min(1, c/\lvert \nabla f\rvert) \nabla f$                  | Prevents exploding gradients   | Need to tune threshold $c$       |
+| **Early Stopping**     | Stop when validation stagnates     | Monitor validation loss                                                | Prevents overfitting                    | Requires validation set          |
+
 ## Summary
 
 We introduced several new concepts:
 
 - Polyak momentum,\pause
-- Nesterov acceleration (momentum), and\pause
-- adaptive gradients (AdaGrad),\pause
+- Nesterov acceleration (momentum),\pause
+- Polyak-Ruppert averaging,\pause
+- adaptive gradients (AdaGrad, RMSProp),\pause
+- gradient clipping, and\pause
+- early stopping.\pause
 
 \medskip\pause
 
