--- a/index.qmd
+++ b/index.qmd
@@ -186,7 +186,7 @@ to get started.
 #### Exercise Session 7
 
 - **Main topic**: Branch prediction
-- **In class walkthrough:** [Branch prediction illustration](exercises/U7.qmd). 
+- **In class walkthrough:** TA will go through the topic with a live coding example. 
 
 #### Lecture 13: Variations on Stochastic Gradient Descent
 
